(images) Fix regular image display on small screens

--- a/astrobin/static/astrobin/scss/astrobin.scss
+++ b/astrobin/static/astrobin/scss/astrobin.scss
@@ -1764,7 +1764,6 @@ BODY:first-of-type ul.as-list, x:-moz-any-link, x:default { /* Target FF 3.5+ */
       top: 0;
       left: 0;
       z-index: 1;
-      max-width: 620px;
     }
   }
 
